Armado de estructuras para la aplicacion Arrecifes

--- a/app/Resources/views/backend.html.twig
+++ b/app/Resources/views/backend.html.twig
@@ -45,18 +45,18 @@
                         <!-- Home -->   
                         <li class="dropdown">
                             <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown">
-                                Peliculas
+                                Clientes
                             </a>
                             <ul class="dropdown-menu">
                                 <!-- About Pages -->
                                 <li>
-                                    <a href="{{ path('peliculas') }}">
+                                    <a href="#">
                                         <i class="fa fa-list"></i>
                                         Listar
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="{{ path('peliculas_buscar') }}">
+                                    <a href="#">
                                         <i class="fa fa-search"></i>
                                         Buscar
                                     </a>
@@ -119,7 +119,7 @@
                             <div class="search-open">
                                 <form action="/peliculas_buscar" method="post">
                                     <div class="input-group animated fadeInDown">
-                                        <input type="text" name="search" class="form-control" placeholder="Buscar pelicula">
+                                        <input type="text" name="search" class="form-control" placeholder="Buscar">
                                         <span class="input-group-btn">
                                             <button class="btn-u" type="submit">Ir</button>
                                         </span>
