Desarrollando ABM de clientes

--- a/app/Resources/views/backend.html.twig
+++ b/app/Resources/views/backend.html.twig
@@ -12,7 +12,7 @@
           <div class="left_col scroll-view">
 
             <div class="navbar nav_title" style="border: 0;">
-              <a href="index.html" class="site_title"><i class="fa fa-paw"></i> <span>Arrecifes</span></a>
+              <a href="index.html" class="site_title"><i class="fa fa-paw"></i> <span>APP</span></a>
             </div>
             <div class="clearfix"></div>
 
@@ -44,9 +44,9 @@
                   </li>
                   <li><a><i class="fa fa-edit"></i> Clientes <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu" style="display: none">
-                      <li><a href="form.html">Listado</a>
+                      <li><a href="{{ path('cliente') }}">Listado</a>
                       </li>
-                      <li><a href="form_advanced.html">Alta de cliente</a>
+                      <li><a href="{{ path('cliente_new') }}">Alta de cliente</a>
                       </li>
 
                     </ul>
