--- a/app/Resources/views/base_backend.html.twig
+++ b/app/Resources/views/base_backend.html.twig
@@ -4,7 +4,7 @@
 <!--[if !IE]><!--> 
 <html lang="es"> <!--<![endif]-->  
 <head>
-    <title>{%block title %}Arrecifes - Sistema de gestión{%endblock%}</title>
+    <title>{%block title %}APP - Sistema de gestión{%endblock%}</title>
 
     <!-- Meta -->
     <meta charset="utf-8">
