--- a/src/JGM/CoreBundle/Resources/views/Form/form.html.twig
+++ b/src/JGM/CoreBundle/Resources/views/Form/form.html.twig
@@ -35,7 +35,7 @@
     <div class="form-group {% if errors|length > 0 %}has-error{% endif %}">
         {{ form_label(form) }}
         <div class="col-sm-8">
-            <div class="clearfix">{{ form_widget(form) }}</div>
+            <div class="col-md-6 col-sm-6 col-xs-12">{{ form_widget(form) }}</div>
             {{ form_errors(form) }}
         </div>
     </div>
