--- a/app/Resources/views/base_login.html.twig
+++ b/app/Resources/views/base_login.html.twig
@@ -4,7 +4,7 @@
 <!--[if !IE]><!--> 
 <html lang="es"> <!--<![endif]-->  
 <head>
-    <title>{%block title %}INCAA - Sistema de gestión de peliculas{%endblock%}</title>
+    <title>{%block title %}Sistema de gestión{%endblock%}</title>
 
     <!-- Meta -->
     <meta charset="utf-8">
@@ -17,53 +17,22 @@
     <link rel="shortcut icon" href="favicon.ico">
 
     <!-- CSS Global Compulsory -->
-    <link rel="stylesheet" href="{{ asset('assets/plugins/bootstrap/css/bootstrap.min.css')}}">
-    <link rel="stylesheet" href="{{ asset('assets/css/style.css')}}">
+    <link rel="stylesheet" href="{{ asset('assets/css/bootstrap.min.css')}}">
+    <link rel="stylesheet" href="{{ asset('assets/css/animate.min.css')}}">
 
     <!-- CSS Implementing Plugins -->
-    <link rel="stylesheet" href="{{ asset('assets/plugins/line-icons/line-icons.css')}}">
-    <link rel="stylesheet" href="{{ asset('assets/plugins/font-awesome/css/font-awesome.min.css')}}">
-    <link rel="stylesheet" href="{{ asset('assets/plugins/flexslider/flexslider.css')}}">  
-    <link rel="stylesheet" href="{{ asset('assets/plugins/parallax-slider/css/parallax-slider.css')}}">
-
-    <!-- CSS Theme -->    
-    <link rel="stylesheet" href="{{ asset('assets/css/themes/dark-blue.css')}}" id="style_color">
-
-    <!-- CSS Customization -->
     <link rel="stylesheet" href="{{ asset('assets/css/custom.css')}}">
+    <link rel="stylesheet" href="{{ asset('assets/css/icheck/flat/green.css')}}">
+    <script type="text/javascript" src="{{asset('assets/js/jquery.min.js')}}"></script>
+
 
 {% endblock %}
 
 </head>	
-    <body class="theme-blue">
+    <body style="background:#F7F7F7;">
     {% block body %}
 
     {% endblock %}
-    
-{% block javascripts %}
-<!-- JS Global Compulsory -->			
-<script type="text/javascript" src="{{asset('assets/plugins/jquery-1.10.2.min.js')}}"></script>
-<script type="text/javascript" src="{{asset('assets/plugins/jquery-migrate-1.2.1.min.js')}}"></script>
-<script type="text/javascript" src="{{asset('assets/plugins/bootstrap/js/bootstrap.min.js')}}"></script>
-<!-- JS Implementing Plugins -->
-<script type="text/javascript" src="{{asset('assets/plugins/back-to-top.js')}}"></script>
-<script type="text/javascript" src="{{asset('assets/plugins/flexslider/jquery.flexslider-min.js')}}"></script>
-<script type="text/javascript" src="{{asset('assets/plugins/parallax-slider/js/modernizr.js')}}"></script>
-<script type="text/javascript" src="{{asset('assets/plugins/parallax-slider/js/jquery.cslider.js')}}"></script>
-<!-- JS Page Level -->           
-<script type="text/javascript" src="{{asset('assets/js/app.js')}}"></script>
-<script type="text/javascript" src="{{asset('assets/js/pages/index.js')}}"></script>
-<script type="text/javascript">
-    jQuery(document).ready(function() {
-      	App.init();
-        App.initSliders();
-        Index.initParallaxSlider();        
-    });
-</script>
-<!--[if lt IE 9]>
-    <script src="assets/plugins/respond.js"></script>
-    <script src="assets/plugins/html5shiv.js"></script>    
-<![endif]-->
-{% endblock %}
+
     </body>
 </html>
