--- a/app/Resources/views/backend.html.twig
+++ b/app/Resources/views/backend.html.twig
@@ -12,14 +12,14 @@
           <div class="left_col scroll-view">
 
             <div class="navbar nav_title" style="border: 0;">
-              <a href="index.html" class="site_title"><i class="fa fa-paw"></i> <span>APP</span></a>
+              <a href="{{ path('arrecifes_index') }}" class="site_title"><i class="fa fa-beer fa-2"></i> <span>APP</span></a>
             </div>
             <div class="clearfix"></div>
 
             <!-- menu prile quick info -->
             <div class="profile">
               <div class="profile_pic">
-                <img src="images/img.jpg" alt="..." class="img-circle profile_img">
+                <img src="{{ asset('images/img.jpg') }}" alt="..." class="img-circle profile_img">
               </div>
               <div class="profile_info">
                 <span>Bienvenido,</span>
@@ -34,10 +34,11 @@
             <div id="sidebar-menu" class="main_menu_side hidden-print main_menu">
 
               <div class="menu_section">
+                  <h3>General</h3>
                   <ul class="nav side-menu">
                   <li><a><i class="fa fa-home"></i> Home <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu" style="display: none">
-                      <li><a href="index.html">Escritorio</a>
+                      <li><a href="{{ path('arrecifes_index') }}">Escritorio</a>
                       </li>
 
                     </ul>
@@ -53,9 +54,9 @@
                   </li>
                   <li><a><i class="fa fa-desktop"></i> Productos <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu" style="display: none">
-                      <li><a href="general_elements.html">Listado</a>
+                      <li><a href="{{ path('producto') }}">Listado</a>
                       </li>
-                      <li><a href="media_gallery.html">Alta de producto</a>
+                      <li><a href="{{ path('producto_new') }}">Alta de producto</a>
                       </li>      
                     </ul>
                   </li>
@@ -110,7 +111,7 @@
               <ul class="nav navbar-nav navbar-right">
                 <li class="">
                   <a href="javascript:;" class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-                    <img src="images/img.jpg" alt="">{{ app.user }}
+                    <img src="{{ asset('images/img.jpg') }}" alt="">{{ app.user }}
                     <span class=" fa fa-angle-down"></span>
                   </a>
                   <ul class="dropdown-menu dropdown-usermenu animated fadeInDown pull-right">
