--- a/app/Resources/views/includes/flashes.html.twig
+++ b/app/Resources/views/includes/flashes.html.twig
@@ -2,10 +2,11 @@
 {% if tipo_mensajes|length > 0 %}
     {% for key,  messages in tipo_mensajes %}
         {% for  message in messages %}
-            <div class="alert alert-{{ key }}{% if key == "error" %} alert-danger{% endif %}">
-                <a class="close" data-dismiss="alert" href="#">x</a>
+            <div class="alert alert-{{ key }} alert-dismissible fade in{% if key == "error" %} alert-danger{% endif %}">
+                <button class="close" data-dismiss="alert" href="#"><span aria-hidden="true">×</span></button>
                 {{ message |raw}}
             </div>
         {% endfor %}
     {% endfor %}
 {% endif %}
+ 
