Correcciones de estilos}

--- a/app/Resources/views/backend.html.twig
+++ b/app/Resources/views/backend.html.twig
@@ -52,7 +52,7 @@
 
                     </ul>
                   </li>
-                  <li><a><i class="fa fa-desktop"></i> Productos <span class="fa fa-chevron-down"></span></a>
+                  <li><a><i class="fa fa-beer"></i> Productos <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu" style="display: none">
                       <li><a href="{{ path('producto') }}">Listado</a>
                       </li>
@@ -60,7 +60,7 @@
                       </li>      
                     </ul>
                   </li>
-                  <li><a><i class="fa fa-table"></i> Usuarios <span class="fa fa-chevron-down"></span></a>
+                  <li><a><i class="fa fa-user"></i> Usuarios <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu" style="display: none">
                       <li><a href="tables.html">Listado</a>
                       </li>
