--- a/src/JGM/AgpBundle/Resources/views/Cliente/index.html.twig
+++ b/src/JGM/AgpBundle/Resources/views/Cliente/index.html.twig
@@ -7,6 +7,12 @@
                     {% include ":includes:flashes.html.twig" %}
                 </div>
               <div class="x_panel">
+                <div class="x_title">
+                    <h2>Clientes</h2>
+                    <a href="{{ path('cliente_new') }}" class="pull-right btn btn-dark"> <i class="fa fa-user">
+                                                                </i> Nuevo cliente </a>
+                    <div class="clearfix"></div>
+                </div>  
                 <div class="x_content">
                   <div class="row">
                     <div class="clearfix"></div>
