--- a/src/JGM/AgpBundle/Resources/views/Producto/index.html.twig
+++ b/src/JGM/AgpBundle/Resources/views/Producto/index.html.twig
@@ -6,7 +6,9 @@
     <div class="col-md-12 col-sm-12 col-xs-12">
         <div class="x_panel">
             <div class="x_title">
-                <h2>Listado de clientes</h2>
+                <h2>Listado de productos</h2>
+                <a href="{{ path('producto_new') }}" class="pull-right btn btn-dark"> <i class="fa fa-beer">
+                                                                </i> Nuevo producto </a>
                  <div class="clearfix"></div>
             </div>
             <div class="x_content">
@@ -14,10 +16,7 @@
                     <thead>
                         <tr class="headings">            
                           <th>Nombre </th>
-                          <th>Contacto </th>
-                          <th>Dirección </th>
-                          <th>Tipo </th>
-                          <th>Modalidad de pago </th>           
+                          <th>precio </th>                      
                           <th class=" no-link last"><span class="nobr">Action</span>
                           </th>
                         </tr>
@@ -25,14 +24,12 @@
                     <tbody>
                       {% for entity in entities %}
                       <tr>
-                        <td><a href="{{ path('cliente_show', {'id':entity.id }) }}">{{ entity.nombre }}</a></td>
-                        <td><a href="{{ path('cliente_show', {'id':entity.id }) }}">{{ entity.contacto }}</a></td>
-                        <td><a href="{{ path('cliente_show', {'id':entity.id }) }}">{{ entity.direccion }}</a></td>
-                        <td><a href="{{ path('cliente_show', {'id':entity.id }) }}">{{ entity.tipo }}</a></td>
-                        <td><a href="{{ path('cliente_show', {'id':entity.id }) }}">{{ entity.modalidadPago }}</a></td>
+                        <td><a href="{{ path('producto_show', {'id':entity.id }) }}">{{ entity.nombre }}</a></td>
+                        <td><a href="{{ path('producto_show', {'id':entity.id }) }}">{{ entity.precio }}</a></td>
+        
                         <td>
-                          <a href="{{ path('cliente_show', {'id':entity.id }) }}">Mostrar</a>
-                          <a href="{{ path('cliente_edit', {'id':entity.id }) }}">Editar</a>
+                          <a href="{{ path('producto_show', {'id':entity.id }) }}">Mostrar</a>
+                          <a href="{{ path('producto_edit', {'id':entity.id }) }}">Editar</a>
                         </td>
                       </tr>
                     {% endfor %}
@@ -42,55 +39,4 @@
         </diV>
     </div>
 </div>
-         
-    
-{% endblock %}
-{% block javascripts %}
-
-<!-- JS Global Compulsory -->			
-<script type="text/javascript" src="{{asset('assets/js/datatables/js/jquery.dataTables.js')}}"></script>
-<script type="text/javascript" src="{{asset('assets/js/datatables/tools/js/dataTables.tableTools.js')}}"></script>
-<script>
- 
-
-    var asInitVals = new Array();
-    $(document).ready(function() {
-      var oTable = $('#example').dataTable({
-        "oLanguage": {
-          "sSearch": "Buscar:"
-        },
-        "aoColumnDefs": [{
-            'bSortable': false,
-            'aTargets': [0]
-          } //disables sorting for column one
-        ],
-        'iDisplayLength': 12,
-        "sPaginationType": "full_numbers",
-        "dom": 'T<"clear">lfrtip',
-        "tableTools": {
-          "sSwfPath": "js/datatables/tools/swf/copy_csv_xls_pdf.swf"
-        }
-      });
-      $("tfoot input").keyup(function() {
-        /* Filter on the column based on the index of this element's parent <th> */
-        oTable.fnFilter(this.value, $("tfoot th").index($(this).parent()));
-      });
-      $("tfoot input").each(function(i) {
-        asInitVals[i] = this.value;
-      });
-      $("tfoot input").focus(function() {
-        if (this.className == "search_init") {
-          this.className = "";
-          this.value = "";
-        }
-      });
-      $("tfoot input").blur(function(i) {
-        if (this.value == "") {
-          this.className = "search_init";
-          this.value = asInitVals[$("tfoot input").index(this)];
-        }
-      });
-    });
-  </script>
-
 {% endblock %}
