Desarrollando modulo de entrega

--- a/app/Resources/views/backend.html.twig
+++ b/app/Resources/views/backend.html.twig
@@ -60,6 +60,14 @@
                       </li>      
                     </ul>
                   </li>
+                  <li><a><i class="glyphicon glyphicon-file"></i>  Entregas <span class="fa fa-chevron-down"></span></a>
+                    <ul class="nav child_menu" style="display: none">
+                      <li><a href="{{ path('entrega') }}">Listado</a>
+                      </li>
+                      <li><a href="{{ path('entrega_new') }}">Nueva entrega</a>
+                      </li>      
+                    </ul>
+                  </li>
                   <li><a><i class="fa fa-user"></i> Usuarios <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu" style="display: none">
                       <li><a href="tables.html">Listado</a>
