--- a/app/Resources/views/base_backend.html.twig
+++ b/app/Resources/views/base_backend.html.twig
@@ -87,7 +87,7 @@
     <script>
         
         
-          var asInitVals = new Array();
+        var asInitVals = new Array();
         $(document).ready(function() {
         var oTable = $('#example').dataTable({
         "oLanguage": {
@@ -129,7 +129,7 @@
         $(document).ready(function() {
 
                   $(".select2_single").select2({
-            placeholder: "Select a state",
+            placeholder: "Seleccione opción",
             allowClear: true
           });
           $(".select2_group").select2({});
