Desarrollando firma con canvas

--- a/src/JGM/AgpBundle/Resources/views/Entrega/index.html.twig
+++ b/src/JGM/AgpBundle/Resources/views/Entrega/index.html.twig
@@ -28,11 +28,11 @@
                     <tbody>
                       {% for entity in entities %}
                       <tr>
-                        <td><a href="{{ path('entrega_show', {'id':entity.id }) }}">{{ entity.fecha }}</a></td>
+                        <td><a href="{{ path('entrega_show', {'id':entity.id }) }}">{{ entity.fecha | date('d/m/Y')}}</a></td>
                         <td><a href="{{ path('entrega_show', {'id':entity.id }) }}">{{ entity.cliente.getNombre }}</a></td>
                         <td><a href="{{ path('entrega_show', {'id':entity.id }) }}">{{ entity.descuentoEspecial }}</a></td>
                         <td><a href="{{ path('entrega_show', {'id':entity.id }) }}">{{ entity.pagoRealizado }}</a></td>
-                        <td><a href="{{ path('entrega_show', {'id':entity.id }) }}">{{ entity.limpiezaRealziada }}</a></td>
+                        <td><a href="{{ path('entrega_show', {'id':entity.id }) }}">{{ entity.limpiezaRealizada }}</a></td>
                         <td><a href="{{ path('entrega_show', {'id':entity.id }) }}">{{ entity.cambioCo2 }}</a></td>
         
                         <td>
