--- a/src/JGM/AgpBundle/Resources/views/Default/index.html.twig
+++ b/src/JGM/AgpBundle/Resources/views/Default/index.html.twig
@@ -304,3 +304,49 @@
         </div>
   
 {% endblock %}
+
+{% block javascripts %}
+    {{ parent()}}
+    <script type="text/javascript" src="{{asset('assets/js/gauge/gauge.min.js')}}"></script>
+    <script type="text/javascript" src="{{asset('assets/js/gauge/gauge_demo.js')}}"></script>
+    <script type="text/javascript" src="{{asset('assets/js/chartjs/chart.min.js')}}"></script>
+    <script>
+        Chart.defaults.global.legend = {
+          enabled: false
+        };
+
+        var data = {
+          labels: [
+            "Symbian",
+            "Blackberry",
+            "Other",
+            "Android",
+            "IOS"
+          ],
+          datasets: [{
+            data: [15, 20, 30, 10, 30],
+            backgroundColor: [
+              "#BDC3C7",
+              "#9B59B6",
+              "#455C73",
+              "#26B99A",
+              "#3498DB"
+            ],
+            hoverBackgroundColor: [
+              "#CFD4D8",
+              "#B370CF",
+              "#34495E",
+              "#36CAAB",
+              "#49A9EA"
+            ]
+
+          }]
+        };
+
+        var canvasDoughnut = new Chart(document.getElementById("canvas1"), {
+          type: 'doughnut',
+          tooltipFillColor: "rgba(51, 51, 51, 0.55)",
+          data: data
+        });
+    </script>
+{% endblock %}
