--- a/src/JGM/AgpBundle/Resources/views/Entrega/new.html.twig
+++ b/src/JGM/AgpBundle/Resources/views/Entrega/new.html.twig
@@ -2,30 +2,133 @@
 {% form_theme form 'CoreBundle:Form:form.html.twig' %}
 
 {% block contenido %}
-  <div class="row-fluid">
-    <div class="col-md-12 col-sm-12 col-xs-12">
-      <div class="x_panel">       
-          <div class="x_title">
-            <h2>Nueva entrega</h2>
-            <div class="clearfix"></div>
-          </div>
-          <div class="x_content">
-            <form accept-charset="UTF-8" class="form-horizontal form-label-left" enctype="multipart/form-data" method="post" action="{{ path('entrega_create') }}">
-              {{ form_widget(form) }}
-              <div class="ln_solid"></div>              
-              
-               <div class="form-group">
-                    <div class="col-md-6 col-sm-6 col-xs-12 col-md-offset-3">
-                      <a href="{{ path('entrega') }}" class="guardar btn btn-primary">Volver</a>
-                      <input type="submit" class="guardar btn btn-success" value="Guardar" />
-                    </div>
+    <div class="row">
+        <div class="col-md-12 col-sm-12 col-xs-12">
+            <div class="x_panel">       
+                <div class="x_title">
+                    <h2>Nueva entrega</h2>
+                    <div class="clearfix"></div>
                 </div>
-            </form>  
-          </div>
-      </div>
+                <div class="x_content">
+                    <form accept-charset="UTF-8" class="form-horizontal form-label-left" enctype="multipart/form-data" method="post" action="{{ path('entrega_create') }}">
+                        {{ form_widget(form) }}
+
+                        <div class="form-group ">
+                            <label for="jgm_agpbundle_entrega_firma" class=" col-sm-3  control-label no-padding-right">
+                                Firma</label>
+                            <div class="col-sm-8">
+                                <div class="col-md-6 col-sm-6 col-xs-12">
+                                    <canvas id="canvas" style="border:1px solid;" width="500" height="200"></canvas>
+                                    <input type="color" id="color" value="#000">                   
+                                    <a class="btn btn-info" id="bt-clear">CLEAR</a>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="ln_solid"></div>              
+
+                        <div class="form-group">
+                            <div class="col-md-6 col-sm-6 col-xs-12 col-md-offset-3">
+                                <a href="{{ path('entrega') }}" class="guardar btn btn-primary">Volver</a>
+                                <input type="submit" id="bt-save" class="guardar btn btn-success" value="Guardar" />
+                            </div>
+                        </div>
+                    </form>  
+                </div>
+            </div>
+        </div>
     </div>
-  </div>
-                
-                              
+                                
 {% endblock %}
 
+{% block javascripts %}
+{{ parent() }}
+    <script>
+    $(document).ready(function() {
+        var tiemposcambian = tiemposcambian || {};
+
+        tiemposcambian.GuardandoPNGs = (function () {
+            var mousePressed = false;
+            var lastX, lastY;
+            var ctx;
+
+            function init() {
+                // init canvas
+                var canvas = document.getElementById('canvas');
+                ctx = canvas.getContext('2d');
+                resetCanvas();
+
+                // button events
+                document.getElementById('bt-save').onmouseup = sendToServer;
+                document.getElementById('bt-clear').onmouseup = resetCanvas;
+
+                // canvas events
+                canvas.onmousedown = function (e) {
+                    draw(e.layerX, e.layerY);
+                    mousePressed = true;
+                };
+
+                canvas.onmousemove = function (e) {
+                    if (mousePressed) {
+                        draw(e.layerX, e.layerY);
+                    }
+                };
+
+                canvas.onmouseup = function (e) {
+                    mousePressed = false;
+                };
+
+                canvas.onmouseleave = function (e) {
+                    mousePressed = false;
+                };
+            }
+
+            function draw(x, y) {
+                if (mousePressed) {
+                    ctx.beginPath();
+                    ctx.strokeStyle = document.getElementById('color').value;
+                    ctx.lineWidth = 1;
+                    ctx.lineJoin = 'round';
+                    ctx.moveTo(lastX, lastY);
+                    ctx.lineTo(x, y);
+                    ctx.closePath();
+                    ctx.stroke();
+                }
+                lastX = x;
+                lastY = y;
+            }
+
+            function sendToServer() {
+                var data = canvas.toDataURL('image/png');
+                var xhr = new XMLHttpRequest();
+                xhr.onreadystatechange = function () {
+                    // request complete
+                    if (xhr.readyState == 4) {
+                        //window.open('firmas/' + xhr.responseText, '_blank');
+                    }
+                }
+                xhr.open('POST', '{{ path('entrega_create') }}', true);
+                xhr.setRequestHeader('Content-Type', 'application/upload');
+                xhr.send(data);
+            }
+
+            function resetCanvas() {
+                // just repaint canvas white
+                ctx.fillStyle = '#EEEEEE';
+                ctx.fillRect(0, 0, canvas.width, canvas.height);
+            }
+
+            return {
+                'init': init
+            };
+        });
+
+
+        window.onload = function () {
+            new tiemposcambian.GuardandoPNGs().init();
+        };
+   });
+    </script>
+
+
+{% endblock %}
