--- a/app/Resources/views/backend.html.twig
+++ b/app/Resources/views/backend.html.twig
@@ -64,7 +64,7 @@
                     <ul class="nav child_menu" style="display: none">
                       <li><a href="{{ path('entrega') }}">Listado</a>
                       </li>
-                      <li><a href="{{ path('entrega_new') }}">Nueva entrega</a>
+                      <li><a href="{{ path('entrega_stepdatoscarga') }}">Nueva entrega</a>
                       </li>      
                     </ul>
                   </li>
