--- a/src/JGM/UsuarioBundle/Resources/views/Default/login.html.twig
+++ b/src/JGM/UsuarioBundle/Resources/views/Default/login.html.twig
@@ -10,6 +10,7 @@
       <div id="login" class="animate form">
         <section class="login_content">
            <form action="{{ path('usuario_login_check') }}" method="post">
+            <img src="{{ asset('images/logoarrecifes.png') }}"  alt="">
             <h1>Ingresar</h1>
             {% if error %}
             <div class="alert alert-danger fade in alert-dismissable">
