--- a/app/Resources/views/backend.html.twig
+++ b/app/Resources/views/backend.html.twig
@@ -70,9 +70,9 @@
                   </li>
                   <li><a><i class="fa fa-user"></i> Usuarios <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu" style="display: none">
-                      <li><a href="tables.html">Listado</a>
+                      <li><a href="{{ path('usuario') }}">Listado</a>
                       </li>
-                      <li><a href="tables_dynamic.html">Alta de usuario</a>
+                      <li><a href="{{ path('usuario_new') }}">Alta de usuario</a>
                       </li>
                     </ul>
                   </li>
