--- a/app/Resources/views/includes/_aDelRestore.html.twig
+++ b/app/Resources/views/includes/_aDelRestore.html.twig
@@ -1,4 +1,4 @@
-<a href="#" class="bootbox-confirm" entity_id="{{id}}" 
+<a class="btn btn-default" href="#" class="bootbox-confirm" entity_id="{{id}}" 
 {% if entity.eliminado %}
    eliminado="1" alt="restaurar" title="restaurar"
    >{% include ":includes:_restoreIcon.html.twig" %}
