--- a/src/JGM/AgpBundle/Resources/views/Entrega/_stepConfirmFirma.html.twig
+++ b/src/JGM/AgpBundle/Resources/views/Entrega/_stepConfirmFirma.html.twig
@@ -7,128 +7,131 @@
         </div>
         <div class="x_content">
             <div id="wizard" class="form_wizard wizard_horizontal">
-                <ul class="wizard_steps col-md-12 col-sm-12 col-xs-12" >
-                    <li>
-                        <a href="#step-1" >
-                            <span class="step_no">1</span>
-                            <span class="step_descr">
-                                Carga de datos                                       
-                            </span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#step-2" >
-                            <span class="step_no">2</span>
-                            <span class="step_descr">
-                                Asignación de productos
-                            </span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#step-3" class="selected">
-                            <span class="step_no">3</span>
-                            <span class="step_descr">
-                                Confirmación
-                            </span>
-                        </a>
-                    </li>
+                <form accept-charset="UTF-8" class="form-horizontal form-label-left" enctype="multipart/form-data" method="post" action="{{ path('entrega_stepconfirmfirma', { 'id': entity.id  }) }}">
 
-                </ul>
-                <div class="ln_solid col-md-12 col-sm-12 col-xs-12"></div>
+                    <ul class="wizard_steps col-md-12 col-sm-12 col-xs-12" >
+                        <li>
+                            <a href="#step-1" >
+                                <span class="step_no">1</span>
+                                <span class="step_descr">
+                                    Carga de datos                                       
+                                </span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#step-2" >
+                                <span class="step_no">2</span>
+                                <span class="step_descr">
+                                    Asignación de productos
+                                </span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#step-3" class="selected">
+                                <span class="step_no">3</span>
+                                <span class="step_descr">
+                                    Confirmación
+                                </span>
+                            </a>
+                        </li>
 
-                <div class="col-md-6 col-sm-12 col-xs-12">  
-                    <div class="x_panel">
-                        <div class="x_title">
-                            <h2>Selección de productos</h2>
-                            <ul class="nav navbar-right panel_toolbox">
-                                <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
-                                </li>                                    
-                                <li><a class="close-link"><i class="fa fa-close"></i></a>
-                                </li>
-                                <li class="dropdown">
-                                    <a aria-expanded="false" role="button" data-toggle="dropdown" class="dropdown-toggle" href="#"><i class="fa fa-wrench"></i></a>
-                                    <ul role="menu" class="dropdown-menu">
-                                        <li><a href="#">Settings 1</a>
-                                        </li>
-                                        <li><a href="#">Settings 2</a>
-                                        </li>
-                                    </ul>
-                                </li>
-                            </ul>
-                            <div class="clearfix"></div>
-                        </div>
-                        <div class="x_content">
-                            <h3>{{ entity.cliente.getNombre }}</h3>
-                            <p>{{ entity.fecha | date('d-m-Y') }}</p>  
-                            <p>Contacto: {{ entity.cliente.contacto }}</p>
-                            <p>Dirección:  {{ entity.cliente.direccion }}</p> 
-                            <p>Lts a llevar:  <span class="label label-info">{{ entity.cliente.cantidadPermitida }}</span></p> 
-                            <p>Modalidad de pago:  <span class="label label-primary">{{ entity.cliente.modalidadPago }}</span></p> 
+                    </ul>
+                    <div class="ln_solid col-md-12 col-sm-12 col-xs-12"></div>
 
-                            {% if entity.descuentoEspecial %}
-                                <span class="label label-success">Descuento especial</span>
-                            {% endif %}
-                            {% if entity.pagoRealizado %}
-                                <span class="label label-success">Pago realizado</span>
-                            {% endif %}
-                            {% if entity.limpiezaRealizada %}
-                                <span class="label label-success">Limpieza realizada</span>
-                            {% endif %}
-                            {% if entity.cambioCo2 %}
-                                <span class="label label-success">Cambio Co2</span>
-                            {% endif %}   
-                            <ul class="to_do">
-                                {% for producto in entity.getProductos %} 
-                                    <li>
-                                        <p>
-                                            {{ producto.producto.nombre }}
-                                        </p>
+                    <div class="col-md-6 col-sm-12 col-xs-12">  
+                        <div class="x_panel">
+                            <div class="x_title">
+                                <h2>Selección de productos</h2>
+                                <ul class="nav navbar-right panel_toolbox">
+                                    <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
+                                    </li>                                    
+                                    <li><a class="close-link"><i class="fa fa-close"></i></a>
                                     </li>
-                                {% endfor %}
-                            </ul>
+                                    <li class="dropdown">
+                                        <a aria-expanded="false" role="button" data-toggle="dropdown" class="dropdown-toggle" href="#"><i class="fa fa-wrench"></i></a>
+                                        <ul role="menu" class="dropdown-menu">
+                                            <li><a href="#">Settings 1</a>
+                                            </li>
+                                            <li><a href="#">Settings 2</a>
+                                            </li>
+                                        </ul>
+                                    </li>
+                                </ul>
+                                <div class="clearfix"></div>
+                            </div>
+                            <div class="x_content">
+                                <h3>{{ entity.cliente.getNombre }}</h3>
+                                <p>{{ entity.fecha | date('d-m-Y') }}</p>  
+                                <p>Contacto: {{ entity.cliente.contacto }}</p>
+                                <p>Dirección:  {{ entity.cliente.direccion }}</p> 
+                                <p>Lts a llevar:  <span class="label label-info">{{ entity.cliente.cantidadPermitida }}</span></p> 
+                                <p>Modalidad de pago:  <span class="label label-primary">{{ entity.cliente.modalidadPago }}</span></p> 
+
+                                {% if entity.descuentoEspecial %}
+                                    <span class="label label-success">Descuento especial</span>
+                                {% endif %}
+                                {% if entity.pagoRealizado %}
+                                    <span class="label label-success">Pago realizado</span>
+                                {% endif %}
+                                {% if entity.limpiezaRealizada %}
+                                    <span class="label label-success">Limpieza realizada</span>
+                                {% endif %}
+                                {% if entity.cambioCo2 %}
+                                    <span class="label label-success">Cambio Co2</span>
+                                {% endif %}   
+                                <ul class="to_do">
+                                    {% for producto in entity.getProductos %} 
+                                        <li>
+                                            <p>
+                                                {{ producto.producto.nombre }}
+                                            </p>
+                                        </li>
+                                    {% endfor %}
+                                </ul>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="col-md-6 col-sm-6 col-xs-12 "> 
+                        <div class="x_panel">
+                            <div class="x_title">
+                                <h2>Firma</h2>
+                                <ul class="nav navbar-right panel_toolbox">
+                                    <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
+                                    </li>                                    
+                                    <li><a class="close-link"><i class="fa fa-close"></i></a>
+                                    </li>
+                                    <li class="dropdown">
+                                        <a aria-expanded="false" role="button" data-toggle="dropdown" class="dropdown-toggle" href="#"><i class="fa fa-wrench"></i></a>
+                                        <ul role="menu" class="dropdown-menu">
+                                            <li><a href="#">Settings 1</a>
+                                            </li>
+                                            <li><a href="#">Settings 2</a>
+                                            </li>
+                                        </ul>
+                                    </li>
+                                </ul>
+                                <div class="clearfix"></div>
+                            </div>
+                            <div class="x_content">                        
+                                <canvas id="canvas" style="border:1px solid;" width="280" height="150"></canvas></br> 
+                                <input type="color" id="color" value="#000">  
+                                <a class="btn btn-sm btn-info" id="bt-clear">limpiar</a>
+                            </div>
                         </div>
                     </div>
 
-                </div>
-                <div class="col-md-6 col-sm-6 col-xs-12 "> 
-                    <div class="x_panel">
-                        <div class="x_title">
-                            <h2>Firma</h2>
-                            <ul class="nav navbar-right panel_toolbox">
-                                <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
-                                </li>                                    
-                                <li><a class="close-link"><i class="fa fa-close"></i></a>
-                                </li>
-                                <li class="dropdown">
-                                    <a aria-expanded="false" role="button" data-toggle="dropdown" class="dropdown-toggle" href="#"><i class="fa fa-wrench"></i></a>
-                                    <ul role="menu" class="dropdown-menu">
-                                        <li><a href="#">Settings 1</a>
-                                        </li>
-                                        <li><a href="#">Settings 2</a>
-                                        </li>
-                                    </ul>
-                                </li>
-                            </ul>
-                            <div class="clearfix"></div>
-                        </div>
-                        <div class="x_content">                        
-                            <canvas id="canvas" style="border:1px solid;" width="280" height="150"></canvas></br> 
-                            <input type="color" id="color" value="#000">  
-                            <a class="btn btn-sm btn-info" id="bt-clear">limpiar</a>
+                    <div class="ln_solid col-md-12 col-sm-12 col-xs-12"></div>   
+                    <div class="form-group">
+                        <div class="col-md-6 col-sm-6 col-xs-12 col-md-offset-10">
+                            <a href="{{ path('entrega') }}" class="guardar btn btn-primary">Volver</a>
+                            <input type="submit" id="bt-save" class="guardar btn btn-success" value="Confirmar" />
                         </div>
                     </div>
-                </div>
-
-                <div class="ln_solid col-md-12 col-sm-12 col-xs-12"></div>   
-                <div class="form-group">
-                    <div class="col-md-6 col-sm-6 col-xs-12 col-md-offset-10">
-                        <a href="{{ path('entrega') }}" class="guardar btn btn-primary">Volver</a>
-                        <input type="submit" id="bt-save" class="guardar btn btn-success" value="Confirmar" />
-                    </div>
-                </div>
             </div>
         </div>
     </div>
+</div>
 
 
 
