--- a/app/Resources/views/backend.html.twig
+++ b/app/Resources/views/backend.html.twig
@@ -12,7 +12,7 @@
           <div class="left_col scroll-view">
 
             <div class="navbar nav_title" style="border: 0;">
-              <a href="{{ path('arrecifes_index') }}" class="site_title"><i class="fa fa-beer fa-2"></i> <span>APP</span></a>
+              <a href="{{ path('arrecifes_index') }}" class="site_title"><i class="fa fa-beer fa-2"></i> <span>Arrecifes</span></a>
             </div>
             <div class="clearfix"></div>
 
