Correccion de variables en productos

--- a/src/JGM/AgpBundle/Resources/views/Default/index.html.twig
+++ b/src/JGM/AgpBundle/Resources/views/Default/index.html.twig
@@ -8,7 +8,7 @@
             <div class="left"></div>
             <div class="right">
               <span class="count_top"><i class="fa fa-beer"></i> {{ entity.nombre }}</span>
-              <div class="count">{{ entity.stock }} </div>
+              <div class="count">{{ entity.litros }} </div>
               <span class="count_bottom"><i class="green">4% </i> From last Week</span>
             </div>
           </div>
